# KIRIN-AI

./: .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
app/: __init__.py
app/agent/: __init__.py  common.py  executor.py  job_agent.py  langgraph_graph.py  langgraph_nodes.py  langgraph_state.py  router.py
app/controllers/: api.py  dept.py  role.py  user.py
app/core/: bootstrap.py  captcha.py  constants.py  crud.py  dependency.py  exceptions.py  init_app.py  middlewares.py  security.py  seed.py
app/log/: log.py
app/memory/: __init__.py  memory.py
app/models/: __init__.py  admin.py  base.py  business.py  chat.py  enums.py
app/rag/: __init__.py  chromadb_client.py  chunker.py  doc_type_detector.py  embedding.py  ir.py  pipeline.py  structural_chunker.py
app/repositories/: __init__.py  api.py  auditlog.py  base.py  business.py  chat.py  config.py  dept.py  menu.py  role.py  user.py
app/schemas/: business.py  captcha.py  chat.py  config.py  login.py  menus.py  users.py
app/services/: __init__.py  api.py  auditlog.py  business.py  chat.py  config.py  dept.py  health.py  menu.py  metrics.py  registry.py  role.py  task_queue.py  upload_service.py  user.py
app/settings/: config.py
app/tools/: __init__.py  base.py  conversation_tool.py  feedback_tool.py  guide_tool.py  interview_sim_tool.py  interview_tool.py  jd_tool.py  (+10 more)
data/: todos.json
docs/: bagu-interview.md  interview-questions.md
tests/: conftest.py
web/: .gitignore  package.json  pnpm-lock.yaml
(+187 files in other folders)
