[project]
name = "vue-fastapi-admin"
version = "0.1.0"
description = "KIRIN-AI"
authors = [
    {name = "mizhexiaoxiao", email = "mizhexiaoxiao@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "tortoise-orm==0.25.0",
    "pydantic==2.10.5",
    "email-validator==2.2.0",
    "asyncpg==0.30.0",
    "passlib==1.7.4",
    "pyjwt==2.10.1",
    "loguru==0.7.3",
    "pydantic-settings==2.7.1",
    "argon2-cffi==23.1.0",
    "uvicorn==0.34.0",
    "aerich==0.9.0",
    "pypika-tortoise>=0.5.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "starlette==0.37.2",
    "httpx==0.28.1",
    "openai==2.32.0",
    "chromadb>=1.5.6,<2.0.0",
    "pypika>=0.48.9,<0.49.0",
    "Pillow==9.5.0",
    "PyPDF2==3.0.1",
    "python-docx==1.1.2",
    "langgraph==1.1.9",
    "redis>=5.0.0,<6.0.0",
    "setuptools<72.0.0",
]

[dependency-groups]
dev = [
    "black==24.10.0",
    "isort==5.13.2",
    "ruff==0.9.1",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 120
lint.extend-select = []
lint.ignore = [
    "F403",
    "F405",
]

[tool.aerich]
tortoise_orm = "app.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
